# everframe

assets/: Square12x12x2.25_CC_Outside_Design.af
cloud/: README.md
cloud/cloud_function/: main-nanobanana.py  main.py  payload.json  requirements.txt  testing.md
embedded/everframe-esp32/: CMakeLists.txt  image_conversion.py  sdkconfig
embedded/everframe-esp32/main/: CMakeLists.txt  EPD_7in3f.c  EPD_7in3f.h  EPD_7in3f_example.c  ImageData2.c  Kconfig.projbuild  ePaper_Config.c  ePaper_Config.h  main.c
embedded/everframe-esp32/main/GUI/: GUI_Paint.h
pcb/dxf/: BottomKO.dxf  TopComponents.dxf
pcb/everframe_board/: #auto_saved_files#  _autosave-everframe_board.kicad_prl  epaper-display.kicad_sch  everframe-esp32.kicad_sch  everframe_board.kicad_pcb  everframe_board.kicad_prl  everframe_board.kicad_pro  everframe_board.kicad_sch  fp-info-cache  sym-lib-table
pcb/everframe_board/output/gbr/: everframe_board-B_Courtyard.gbr  everframe_board-B_Cu.gbr  everframe_board-B_Fab.gbr  everframe_board-B_Mask.gbr  everframe_board-B_Paste.gbr  everframe_board-B_Silkscreen.gbr  everframe_board-Edge_Cuts.gbr  everframe_board-F_Courtyard.gbr  everframe_board-F_Cu.gbr  everframe_board-F_Fab.gbr  everframe_board-F_Mask.gbr  everframe_board-F_Paste.gbr  everframe_board-F_Silkscreen.gbr  everframe_board-In1_Cu.gbr  everframe_board-In2_Cu.gbr  everframe_board-NPTH-drl.gbr  everframe_board-NPTH-drl_map.gbr  everframe_board-PTH-drl.gbr  everframe_board-PTH-drl_map.gbr
reference/E-Paper_code/: Version_CN.txt  Version_EN.txt  特别提醒.txt
reference/E-Paper_code/Arduino/epd3in7/: epd3in7.h  (+2 more)
(+56 files in other folders)
